--- a/livraria/src/main/resources/static/index.html
+++ b/livraria/src/main/resources/static/index.html
@@ -42,7 +42,7 @@
     </header>
 
     <main role="main">
-
+     <Center>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -55,7 +55,6 @@
             <div class="container">
               <div class="carousel-caption text-left">
                 
-                <p>A leitura liberta o ser humano da alienação</p>
               </div>
             </div>
           </div>
@@ -63,7 +62,6 @@
             <img class="second-slide" src="img/33.jpg" alt="Second slide">
             <div class="container">
               <div class="carousel-caption">
-                <p>A leitura nos permite sonhar</p>
               </div>
             </div>
           </div>
@@ -71,8 +69,6 @@
             <img class="third-slide" src="img/10.jpg" alt="Third slide">
             <div class="container">
               <div class="carousel-caption text-right">
-                <h1>Cantinjho Mágico.</h1>
-                <p>Site desenvolvido para amantes da leitura desfrute de maneira GRATUITA as leituras dispóniveis</p>
               </div>
             </div>
           </div>
@@ -88,6 +84,7 @@
       </div>
        <br>
        <br>
+       </Center>
 
       <div class="container marketing">
 
@@ -163,7 +160,7 @@
 
       <!-- FOOTER -->
       <footer class="container">
-        <p class="float-right"><a href="#">Back to top</a></p>
+        <p class="float-right"><a href="#">Voltar ao topo</a></p>
         <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
     </main>
